--- a/the-directory_react_frontend/package.json
+++ b/the-directory_react_frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "the-directory_react_frontend",
+  "name": "react-class",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
