--- a/the-directory_react_frontend/package.json
+++ b/the-directory_react_frontend/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-qr-reader": "^2.2.1",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-scripts": "5.0.1",
