--- a/the-directory_react_frontend/package.json
+++ b/the-directory_react_frontend/package.json
@@ -11,10 +11,12 @@
     "react-bootstrap": "^2.7.4",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-js-pagination": "^3.0.2",
     "react-paginate": "^8.2.0",
     "react-qr-reader": "^2.2.1",
     "react-qr-scanner": "^1.0.0-alpha.11",
-    "react-scripts": "5.0.1",
+    "react-scanner": "^1.1.0",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
