--- a/the-directory_react_frontend/package.json
+++ b/the-directory_react_frontend/package.json
@@ -20,6 +20,7 @@
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-scanner": "^1.1.0",
     "react-scripts": "^5.0.1",
+    "reactjs-popup": "^2.0.5",
     "swiper": "^9.3.2",
     "web-vitals": "^2.1.4"
   },
